[package]
name = "grawler"
version = "0.1.0"
edition = "2021"
description = "Check PR and issue URLs state"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/grawler"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cli-logger = "0.1"
git2 = "0.18"
gitfrog = { git = "https://github.com/mrtnvgr/gitfrog", branch = "master" }
ignore = "0.4"
lazy_static = "1.4"
log = "0.4"
log_err = "1.1.1"
regex = "1.10"
tokio = { version = "1", features = ["full"] }
url = "2.5"
